# avs-core-encoding-module-sdk

./: CMakeLists.txt  CMakePresets.json  main.cpp
include/player/: Datatype.h
